<resources>
    <string name="app_name">Instaglam</string>
    <string name="login_text">Log In</string>
    <string name="sign_in_text">Sign In</string>
    <string name="pwd">Enter your password</string>
    <string name="reenter_pwd">Re-enter your password</string>
    <string name="username">Enter your username</string>
    <string name="like_button">Like Button</string>
    <string name="shared_preferences_file_name">loginStatus</string>
    <string name="logged_in_user">loggedInUser</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="reels_button_text">Reels</string>
    <string name="posts_button_text">Posts</string>
    <string name="signInText">Enter</string>
</resources>